--- a/centos6/Dockerfile
+++ b/centos6/Dockerfile
@@ -7,7 +7,9 @@ RUN yum -y install openssh-server epel-release && \
     ssh-keygen -q -N "" -t dsa -f /etc/ssh/ssh_host_dsa_key && \
     ssh-keygen -q -N "" -t rsa -f /etc/ssh/ssh_host_rsa_key && \
     sed -i "s/#UsePrivilegeSeparation.*/UsePrivilegeSeparation no/g" /etc/ssh/sshd_config && \
-    sed -i "s/UsePAM.*/UsePAM no/g" /etc/ssh/sshd_config
+    sed -i "s/UsePAM.*/UsePAM no/g" /etc/ssh/sshd_config && \
+    sed -i "s/HostKey.*ed25519_key/#HostKey \/etc\/ssh\/ssh_host_ed25519_key/g" /etc/ssh/sshd_config && \
+    echo 'done' > /tmp/done
 
 ADD set_root_pw.sh /set_root_pw.sh
 ADD run.sh /run.sh
